# dmrg-implementations

./: .gitignore  A2DMRG_AUDIT_REPORT.md  A2DMRG_COMPRESSION_FIX_SUMMARY.md  A2DMRG_CONVERGENCE_VALIDATION.md  A2DMRG_FIX_PROMPT.md  A2DMRG_FIX_VALIDATION.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_VERIFICATION_REPORT.md  BENCHMARK_MANIFEST.md  BENCHMARK_METADATA_SCHEMA.md  CLAUDE.md  CONTRIBUTING.md  CPU_AUDIT_FINAL_REPORT.md  CPU_AUDIT_PROGRESS.md  CPU_AUDIT_REPORT.md  CRITICAL_FIXES_APPLIED.md  DEBUG_REPORT.md  DEPLOYMENT_COMPLETE.md  EXACT_SVD_IMPLEMENTATION.md  EXTERNAL_AUDIT_RESPONSE.md  F1A_SETUP_INSTRUCTIONS.md  FINAL_SUMMARY.md  FIX_A2DMRG_BOND_COLLAPSE_PROMPT.md  FIX_EXTERNAL_AUDIT_PROMPT.md  GPU_BENCHMARK_READY.md  GPU_FIX_QUICK_REFERENCE.md  GPU_OPTIMIZATION_DESIGN.md  GPU_PARITY_FIX_PROMPT.md  GPU_PORT_GAMEPLAN.md  GPU_VERIFICATION_REPORT.md  HEARTBEAT.md  HIPTENSOR_API_FIX_SUMMARY.md  IMPLEMENTATION_MATRIX.md  IMPLEMENTATION_STATUS.md  INITIALIZATION_FIX_STATUS.md  LICENSE  NOTICE  PDMRG2_GPU_PROMPT.md  PDMRG_FIX_PLAN.md  PDMRG_GPU_PROMPT.md  (+57 more)
a2dmrg/: PERFORMANCE_FINDINGS.txt  README.md  TASK_ORIENTATION.md  bench_paper_faithful.py  claude-progress.txt  fix_quimb_python313.py  pyproject.toml  test35_output.txt  test_cross_np_reproducibility.py  test_debug.py  test_microstep_debug.py  test_minimal.py  test_mps_modify.py  test_onesite_vs_twosite.py  test_orthogonality.py  test_p_greater_l.py  test_quick_validation.py  test_reproducibility.py  test_scalability.py  test_warmup_sweeps.py
a2dmrg/a2dmrg/: __main__.py  dmrg.py  mpi_compat.py
a2dmrg/benchmarks/: josephson_correctness_benchmark.py
a2dmrg/docs/: a2dmrg-critical-analysis.md
cpu/pdmrg-cotengra/: LICENSE  pyproject.toml
cpu/pdmrg-opt/: CITATION.cff  README.md  pyproject.toml
cpu/radam/: README.md  pyproject.toml
cpu/rlbfgs/: README.md  pyproject.toml
dmrg-gpu/: CMakeLists.txt  GPU_NATIVE_DMRG_PROMPT.md  GPU_TWO_SITE_DMRG_PROMPT.md  test_pinned_race.cpp  test_zgemm_batched_bug.cpp
dmrg-gpu/src/: accurate_svd_gpu.cpp  dmrg_gpu.cpp  dmrg_gpu.h  dmrg_gpu_impl.h  scalar_traits.h  test_dmrg_gpu.cpp
dmrg2-gpu/: CMakeLists.txt
dmrg2-gpu/src/: dmrg2_gpu.cpp  dmrg2_gpu.h  dmrg2_gpu_impl.h  scalar_traits.h  test_dmrg2_gpu.cpp  test_hipgraph2.cpp
gpu-cuda/dmrg-gpu/: CMakeLists.txt
gpu-cuda/dmrg-gpu-opt/: CMakeLists.txt
gpu-cuda/dmrg2-gpu/: CMakeLists.txt
gpu-cuda/pdmrg-gpu/: CMakeLists.txt
gpu-port/: API_CHANGES_BEFORE_AFTER.md  CMakeLists.txt  Dockerfile.rocm  GPU_NATIVE_ARCHITECTURE.md  HOTAISLE_VALIDATION_RESULTS.md  IMPLEMENTATION_COMPLETE.md  MINIMAL_GPU_IMPLEMENTATION.md  MINIMAL_VERSION_SUMMARY.md  PHASE2_CHECKPOINT.md  PHASE2_COMPLETE.md  PHASE2_CURRENT_STATUS.md  PHASE2_VALIDATION_SUCCESS.md  README.md  RESEARCH_CHECKLIST.md  SINGLE_GPU_STRATEGY.md  TEST_LAPACK_FALLBACK.md  build_mi300x.sh  diagnostic.sh  run_benchmarks.sh  test_env_convention2.py  test_heff_debug.py  test_heff_quick.py  test_heff_verification.py  test_heisenberg_check.py  test_mpo_quick.py  verify_minimal.sh
gpu-port/.claude-memory/: MEMORY.md
gpu-port/examples/: hello_streams.hip  test_hiptensor_minimal.cpp
gpu-port/include/: block_davidson_gpu_native.hpp  dmrg_types.hpp  gpu_memory.hpp  heisenberg_exact.hpp  heisenberg_mpo.hpp  lanczos_eigensolver_gpu_native.hpp  tensor_contractions.hpp
gpu-port/src/: accurate_svd_gpu.cpp  accurate_svd_gpu.h  benchmark_runner.cpp  boundary_merge_gpu.cpp  boundary_merge_gpu.h  dmrg_benchmark.cpp  dmrg_complete.cpp  dmrg_gpu.cpp  dmrg_gpu_native.cpp  dmrg_minimal_gpu.cpp  dmrg_production.cpp  dmrg_with_environments.cpp  heff_optimized_gpu.cpp  heff_optimized_gpu.h  heisenberg_dmrg_complete.cpp  heisenberg_dmrg_gpu.cpp.backup  heisenberg_mpo.cpp  heisenberg_mpo_real.cpp  josephson_mpo.cpp  pdmrg2_complete.cpp  pdmrg2_gpu.cpp  pdmrg_complete.cpp  pdmrg_gpu.cpp  simple_dmrg.cpp  stream_coordinator.cpp  stream_coordinator.h  stream_segment.cpp  stream_segment.h  tensor_contractions_working.cpp  test_boundary_merge.cpp  test_heisenberg_multistream.cpp  test_phase1.cpp  test_stream_coordinator.cpp  test_stream_segment.cpp
gpu-port/tests/: CMakeCache.txt  Makefile  cmake_install.cmake  test_complex  test_hiptensor
gpu-rocm/dmrg-gpu-base/: CMakeLists.txt  README.md  build_mi300x.sh
gpu-rocm/dmrg2-gpu-base/: CMakeLists.txt  README.md  build_mi300x.sh
gpu-rocm/dmrg2-gpu-opt/: CMakeLists.txt  build_mi300x.sh
gpu-rocm/pdmrg-gpu-base/: CMakeLists.txt  README.md  build_mi300x.sh
gpu-rocm/radam-gpu/: CMakeLists.txt  README.md
pdmrg-gpu/: CMakeLists.txt  COMPLETION_PLAN.md  CONFIDENCE_ANALYSIS.md  Dockerfile.rocm  ENVIRONMENT_BUILD_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  GPU_BENCHMARK_INTEGRATION.md  IMPLEMENTATION_STATUS.md  INDEX_MINIMAL.md  MPS_LOADING_STATUS.md  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_REPORT.md  PHASE1_TEST_INSTRUCTIONS.md  PHASE2_CHECKPOINT.md  PHASE2_CURRENT_STATUS.md  PHASE2_DESIGN.md  PHASE2_HIPTENSOR_TEST.md  PHASE2_PROGRESS_STATUS.md  PROGRESS.md  QUICK_START_MINIMAL.md  README.md  README_MINIMAL.md  READY_FOR_TESTING.md  TESTING_INITIALIZATION_FIX.md  TEST_FULL_CHAIN_ENERGY.md  diagnostic.sh  run_benchmarks.sh  test_env_convention.py  test_heff_debug2.py  test_mps_mpo_loader  verify_api_fixes.sh
pdmrg-gpu/include/: block_davidson.hpp  dmrg_types.hpp  heisenberg_mpo.hpp  heisenberg_mpo_real.h  lanczos_eigensolver.hpp  lanczos_eigensolver_gpu_native.hpp  loaded_mpo.hpp  mps_mpo_loader.hpp  svd_solver.hpp
pdmrg-gpu/src/: accurate_svd_gpu.cpp  benchmark_runner.cpp  boundary_merge_gpu.cpp  boundary_merge_gpu.h  dmrg_production.cpp  dmrg_with_environments.cpp  dmrg_working.cpp  exact_contractions.cpp  gpu_benchmark_with_data.cpp  heisenberg_dmrg_complete.cpp  heisenberg_mpo_real.cpp  josephson_mpo.cpp  lanczos_solver.hip  loaded_mpo.hpp  pdmrg2_complete.cpp  pdmrg_benchmark_loaded.cpp  pdmrg_benchmark_loaded_v2.cpp  pdmrg_complete.cpp  pdmrg_gpu.h  pdmrg_gpu_impl.h  pdmrg_gpu_with_loader.cpp  pdmrg_gpu_with_loader_clean.cpp  scalar_traits.h  simple_dmrg.cpp  stream_coordinator.cpp  (+15 more)
pdmrg2/: README.md  pyproject.toml
pdmrg2-gpu/: CMakeLists.txt
(+864 files in other folders)
