[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2dmrg"
version = "0.1.0"
description = "Additive Two-Level Parallel DMRG for quantum many-body physics"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "A2DMRG Development Team"}
]
keywords = ["dmrg", "tensor networks", "quantum physics", "mpi", "parallel computing", "two-level"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

# Dependencies inherited from workspace root
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/a2dmrg"
Documentation = "https://github.com/yourusername/a2dmrg/blob/main/README.md"
Repository = "https://github.com/yourusername/a2dmrg"
"Bug Tracker" = "https://github.com/yourusername/a2dmrg/issues"

[project.scripts]
a2dmrg = "a2dmrg.__main__:main"

[tool.setuptools]
packages = ["a2dmrg"]

[tool.setuptools.package-data]
a2dmrg = ["py.typed"]
